fix dark mode default for select

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   margin-bottom: 12px;
 }
 
-input {
+input, select {
   padding: 8px;
   margin-top: 4px;
   border-radius: 15px;
